tests/integration/snapshots/integration__hover__hover_mid_type_name.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&response).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\ntable Widget {\n  name: string\n}\n```"
  },
  "range": {
    "start": {
      "line": 6,
      "character": 12
    },
    "end": {
      "line": 6,
      "character": 18
    }
  }
}
