tests/integration/snapshots/integration__hover__hover_on_field_enum_type.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&response).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\nenum Color : short {\n  Red = 1,\n  Blue = 2,\n  Green = 3\n}\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 7
    },
    "end": {
      "line": 3,
      "character": 12
    }
  }
}
