tests/integration/snapshots/integration__hover__hover_on_field_primitive_type.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&res).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\nint // scalar\n```\n\n---\n\n32-bit signed integer"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 7
    },
    "end": {
      "line": 2,
      "character": 10
    }
  }
}
