tests/integration/snapshots/integration__hover__hover_on_field_table_type.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&res).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\ntable MyTable1 {\n  b: bool\n}\n```"
  },
  "range": {
    "start": {
      "line": 6,
      "character": 7
    },
    "end": {
      "line": 6,
      "character": 15
    }
  }
}
