tests/integration/snapshots/integration__hover__hover_on_field_vector_type.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&res).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\nstruct Point {\n  x: float\n  y: float\n}\n```\n\n---\n\n A 2D coordinate.\n\n---\n\nSize: 8 bytes\n\nAlignment: 4 bytes"
  },
  "range": {
    "start": {
      "line": 8,
      "character": 13
    },
    "end": {
      "line": 8,
      "character": 18
    }
  }
}
