tests/integration/snapshots/integration__hover__hover_on_included_definition.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&response).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\ntable IncludedTable {\n  b: bool\n}\n```\n\n---\n\n This is from another file."
  },
  "range": {
    "start": {
      "line": 4,
      "character": 7
    },
    "end": {
      "line": 4,
      "character": 20
    }
  }
}
