tests/integration/snapshots/integration__hover__hover_on_root_type.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&response).unwrap()"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```flatbuffers\nnamespace MyNS;\n\ntable MyTable {\n  b: bool\n}\n```"
  },
  "range": {
    "start": {
      "line": 7,
      "character": 10
    },
    "end": {
      "line": 7,
      "character": 17
    }
  }
}
