tests/integration/snapshots/integration__hover__hover_on_rpc_request_namespace.snap
---
source: tests/integration/hover.rs
expression: "serde_json::to_string_pretty(&response).unwrap()"
---
null
